--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -42,7 +42,7 @@
       <!-- ################################################################################################ -->
       <ul class="clear">
         <li><a href="/">Home</a></li>
-        <li ><a href="/blog">Blog</a></li>
+        <li class="active"><a href="/blog">Blog</a></li>
         <li><a href="/constitution">Know The Constitution</a></li>
         <li><a href="/donate">Donate</a></li>
       </ul>
@@ -53,7 +53,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
+<div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/lawtv.png');">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
