--- a/views/constitution.ejs
+++ b/views/constitution.ejs
@@ -70,7 +70,7 @@
   <article class="hoc cta clear"> 
     <!-- ################################################################################################ -->
     <h6 class="three_quarter first font-x2">Enlightening the public</h6>
-    <footer class="one_quarter"><a class="btn" href="blog"><strong>Learn More</strong></a></footer>
+    <footer class="one_quarter"><a class="btn" href="/blog"><strong>Learn More</strong></a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
