--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
   <article class="hoc cta clear"> 
     <!-- ################################################################################################ -->
     <h6 class="three_quarter first font-x2">Enlightening the public</h6>
-    <footer class="one_quarter"><a class="btn" href="blog"><strong>Learn More</strong></a></footer>
+    <footer class="one_quarter"><a class="btn" href="/blog"><strong>Learn More</strong></a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
@@ -200,7 +200,7 @@
         </article>
       </li>
     </ul>
-    <footer><a class="btn" href="#"><strong>Learn more</strong></a></footer>
+    <footer><a class="btn" href="/constitution"><strong>Learn more</strong></a></footer>
     <!-- ################################################################################################ -->
   </section>
 </div>
@@ -267,7 +267,7 @@
           </div>
         </article>
       </li>
-      <li><a class="btn" href="#"><strong>Read More</strong></a></li>
+      <li><a class="btn" href="/blog"><strong>Read More</strong></a></li>
     </ul>
     <!-- ################################################################################################ -->
   </section>
@@ -305,7 +305,7 @@
           </div>
         </article>
       </li>
-      <li><a class="btn" href="#"><strong>See More</strong></a></li>
+      <li><a class="btn" href="https://www.youtube.com/channel/UCuMEDGWo4pIVSYogW8JKq4A"><strong>See More</strong></a></li>
     </ul>
     <!-- ################################################################################################ -->
   </section>
