--- a/views/constitution.ejs
+++ b/views/constitution.ejs
@@ -190,11 +190,11 @@
       <div class="one_quarter first">
         <h6 class="heading">Law Television & Awareness</h6>
         <nav>
-          <ul class="nospace linklist">
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/constitution">Know The Constitution</a></li>
-            <li><a href="/donate">Donate</a></li>
-            <li><a class="btn" href="#"><strong>Donate</strong></a></li> 
+            <ul class="nospace linklist">
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/constitution">Know The Constitution</a></li>
+                <li><a class="btn" href="/donate"><strong>Donate</strong></a></li> 
+                </ul>
         </nav>
       </div>
       <div class="one_quarter">
