--- a/views/index.ejs
+++ b/views/index.ejs
@@ -321,8 +321,8 @@
         <ul class="nospace linklist">
           <li><a href="/blog">Blog</a></li>
           <li><a href="/constitution">Know The Constitution</a></li>
-          <li><a href="/donate">Donate</a></li>
-          <li><a class="btn" href="#"><strong>Donate</strong></a></li> 
+          <li><a class="btn" href="/donate"><strong>Donate</strong></a></li> 
+          </ul>
       </nav>
     </div>
     <div class="one_quarter">
