--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -44,7 +44,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/constitution">Know The Constitution</a></li>
-        <li class="active"><a href="/donate">Donate</a></li>
+        <li class="active"><a href="https://www.paypal.com/donate/?hosted_button_id=L4VF4UQVN9UMN">Donate</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
@@ -70,7 +70,7 @@
   <article class="hoc cta clear"> 
     <!-- ################################################################################################ -->
     <h6 class="three_quarter first font-x2">Enlightening the public</h6>
-    <footer class="one_quarter"><a class="btn" href="/donate"><strong>Donate</strong></a></footer>
+    <footer class="one_quarter"><a class="btn" href="https://www.paypal.com/donate/?hosted_button_id=L4VF4UQVN9UMN"><strong>Donate</strong></a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
@@ -93,17 +93,17 @@
             <ul class="nospace linklist">
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/constitution">Know The Constitution</a></li>
-                <li><a class="btn" href="/donate"><strong>Donate</strong></a></li> 
+                <li><a class="btn" href="https://www.paypal.com/donate/?hosted_button_id=L4VF4UQVN9UMN"><strong>Donate</strong></a></li> 
                 </ul>
         </nav>
       </div>
       <div class="one_quarter">
         <h6 class="heading">Subscribe To Our Newsletter</h6>
-        <form action="#" method="post">
+        <form action="https://formsubmit.co/4adf6033b2b3b04e917e493f43825767" method="POST">
           <fieldset>
             <legend>Newsletter:</legend>
-            <input class="btmspace-15" type="text" value="" placeholder="Name">
-            <input class="btmspace-15" type="text" value="" placeholder="Email">
+            <input class="btmspace-15" type="text" name="Name" value="" placeholder="Name">
+            <input class="btmspace-15" type="email" name="Email" value="" placeholder="Email">
             <button class="btn" type="submit" value="submit">Submit</button>
           </fieldset>
         </form>
