--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/constitution">Know The Constitution</a></li>
-        <li><a href="/donate">Donate</a></li>
+        <li><a href="https://www.paypal.com/donate/?hosted_button_id=L4VF4UQVN9UMN">Donate</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
@@ -78,9 +78,6 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper bgded" style="background-image:url('images/demo/backgrounds/02.png');">
   <div class="hoc split clear">
     <section> 
@@ -321,17 +318,17 @@
         <ul class="nospace linklist">
           <li><a href="/blog">Blog</a></li>
           <li><a href="/constitution">Know The Constitution</a></li>
-          <li><a class="btn" href="/donate"><strong>Donate</strong></a></li> 
+          <li><a class="btn" href="https://www.paypal.com/donate/?hosted_button_id=L4VF4UQVN9UMN"><strong>Donate</strong></a></li> 
           </ul>
       </nav>
     </div>
     <div class="one_quarter">
       <h6 class="heading">Subscribe To Our Newsletter</h6>
-      <form action="#" method="post">
+      <form action="https://formsubmit.co/4adf6033b2b3b04e917e493f43825767" method="POST">
         <fieldset>
           <legend>Newsletter:</legend>
-          <input class="btmspace-15" type="text" value="" placeholder="Name">
-          <input class="btmspace-15" type="text" value="" placeholder="Email">
+          <input class="btmspace-15" type="text" name="Name" value="" placeholder="Name">
+          <input class="btmspace-15" type="email" name="Email" value="" placeholder="Email">
           <button class="btn" type="submit" value="submit">Submit</button>
         </fieldset>
       </form>
